--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint --fix ./src --ext .js"
   },
   "dependencies": {
     "react": "17.0.2",
@@ -18,7 +18,8 @@
     "@babel/runtime": "^7.17.9",
     "@react-native-community/eslint-config": "^3.0.1",
     "babel-jest": "^28.0.3",
-    "eslint": "^8.14.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-import": "^2.24.1",
     "jest": "^28.0.3",
     "metro-react-native-babel-preset": "^0.70.3",
     "react-test-renderer": "17.0.2"
