--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "react-native": "0.68.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.10",
-    "@babel/runtime": "^7.17.9",
-    "@react-native-community/eslint-config": "^3.0.1",
-    "babel-jest": "^28.0.3",
-    "eslint": "^7.32.0",
-    "eslint-plugin-import": "^2.24.1",
-    "jest": "^28.0.3",
-    "metro-react-native-babel-preset": "^0.70.3",
+    "@babel/core": "7.17.10",
+    "@babel/runtime": "7.17.9",
+    "@react-native-community/eslint-config": "3.0.1",
+    "babel-jest": "28.0.3",
+    "eslint": "7.32.0",
+    "eslint-plugin-import": "2.24.1",
+    "jest": "28.0.3",
+    "metro-react-native-babel-preset": "0.70.3",
     "react-test-renderer": "17.0.2"
   },
   "jest": {
