--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "android-dev": "cross-env ENVFILE=.env.dev node node_modules/react-native/local-cli/cli.js run-android --variant=devDebug --appIdSuffix dev",
+    "clean-android-dev": "cd android && ./gradlew clean && cd .. && npm run android-dev",
+    "build-android-stage-apk": "cd android && cross-env ENVFILE=.env.stage node ../node_modules/.bin/env-cmd -f .env.android ./gradlew assembleStageRelease",
+    "build-android-prod-apk": "cd android && cross-env ENVFILE=.env.prod node ../node_modules/.bin/env-cmd -f .env.android ./gradlew assembleProdRelease",
+    "build-android-stage": "cd android && cross-env ENVFILE=.env.stage node ../node_modules/.bin/env-cmd -f .env.android ./gradlew bundleStageRelease",
+    "build-android-prod": "cd android && cross-env ENVFILE=.env.prod node ../node_modules/.bin/env-cmd -f .env.android ./gradlew bundleProdRelease",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
@@ -23,6 +29,8 @@
     "@babel/runtime": "7.17.9",
     "@react-native-community/eslint-config": "3.0.1",
     "babel-jest": "28.0.3",
+    "cross-env": "7.0.3",
+    "env-cmd": "10.1.0",
     "eslint": "7.32.0",
     "eslint-plugin-import": "2.24.1",
     "jest": "28.0.3",
