--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ buck-out/
 \.buckd/
 *.keystore
 !debug.keystore
+.env.android
 
 # fastlane
 #
@@ -59,3 +60,10 @@ buck-out/
 # Ruby / CocoaPods
 /ios/Pods/
 /vendor/bundle/
+
+# react-native-config codegen
+ios/tmp.xcconfig
+
+.env.prod
+.env.stage
+.env.dev
